<resources>
    <string name="verification">確認</string>
    <string name="warning">注意</string>
    <string name="time_out">タイムアウトされました。</string>
    <string name="ok">OK</string>
    <string name="title_notification">Thông báo</string>
    <string name="confirm_title">Xác nhận</string>
    <string name="go_setting_enable_nfc_bt">Tới NFC setting</string>
    <string name="go_setting_enable_gps_bt">Tới GPS setting</string>
    <string name="go_setting">Tới cài đặt</string>
    <string name="retry_button">Thử lại</string>
    <string name="exit_button">Thoát</string>
    <string name="skip_bt">Bỏ qua</string>
    <string name="back_bt">Quay lại</string>
    <string name="quit_session">Thoát phiên</string>
    <string name="delete_bt">XÓA DỮ LIỆU</string>
    <string name="deny_bt">Không</string>
    <string name="start_session_method_not_ready">Bạn không thể bắt đầu phiên học khi không có internet!</string>
    <string name="finish_session_method_not_ready">Bạn không thể kết thúc phiên học khi không có internet!</string>
    <string name="login_method_not_ready">Bạn không thể thực hiện đăng nhập khi xe đang di chuyển!</string>
    <string name="logout_method_not_ready">Bạn không thể thực hiện đăng xuất khi xe đang di chuyển!</string>
    <string name="login_by_nfc_method_note_ready">Bạn cần bật NFC để có thể đăng nhập bằng thẻ!</string>
    <string name="data_nfc_incorrect">Sử dụng thẻ không hợp lệ!</string>
    <string name="student_info_title">THÔNG TIN HỌC VIÊN</string>
    <string name="teacher_info_title">THÔNG TIN GIẢNG VIÊN</string>
    <string name="error_title_dialog">CÓ LỖI</string>
    <string name="load_dat_device_config_error">Tải cấu hình thiết bị không thành công!</string>
    <string name="load_dat_device_config_success">Tải cấu hình thiết bị thành công!</string>
    <string name="local_device_date_time_wrong">Thời gian trên thiết bị đang được cài đặt không đúng!\n\nHãy kiểm tra và cài đặt lại trước khi tiếp tục.</string>
    <string name="app_version_deprecate">Phiên bản ứng dụng không còn được hỗ trợ\n\nHãy báo hotline để được xử lý.</string>
    <string name="device_not_link_any_car">Thiết bị DAT chưa được gán với xe nào!\n\nHãy báo trung tâm để được xử lý.</string>
    <string name="dat_not_link_training_center">Thiết bị DAT chưa được gán với trung tâm đào tạo!\n\nHãy báo trung tâm và hotline để được xử lý.</string>
    <string name="can_not_check_dat_in_center_by_internet">Không thể kiểm tra được thiết bị DAT có thuộc trung tâm do không có kết nối internet!</string>
    <string name="teacher_not_link_any_car">Giáo viên chưa được gán với xe tập lái có biển số: %s!\n\nHãy báo trung tâm để được xử lý.</string>
    <string name="active_security_fail">Kích hoạt bảo mật thiết bị thất bại!\n\nHãy thử khởi động lại ứng dụng.</string>
    <string name="student_not_in_camera">Không có học viên trong khung hình!!!</string>
    <string name="student_not_in_recognition_frame">Học viên đang không trong khung nhận dạng!!!</string>
    <string name="gps_not_available">Mất kết nối định vị GPS!!!</string>
    <string name="gps_available">Định vị GPS đã kết nối lại.</string>
    <string name="network_not_available">Mất kết nối mạng!!!</string>
    <string name="face_recognize_fail">Nhận diện thất bại!!!</string>
    <string name="low_brightness">Ánh sáng không đủ để nhận dạng mặt học viên!!!</string>
    <string name="auto_enable_nigh_mode">Chế độ ban đêm tự động kích hoạt</string>
    <string name="auto_disable_nigh_mode">Chế độ ban đêm đã tắt</string>
    <string name="move_device_near_face">Hãy chọn vị trí đặt thiết bị gần với học viên để có đủ ánh sáng nhận diện.</string>
    <string name="face_recognize_increase_guide">Chế độ nhận diện tăng cường được bật trong 15 phút. Hãy chắc chắn khuôn mặt học viên được chiếu sáng rõ nét.</string>
    <string name="camera_error">Camera không hoạt động!!!. Hãy thử tắt ứng dụng và thử lại.</string>
    <string name="over_time_warning">Đã học %s. Cảnh báo phiên học quá 4 giờ sẽ vi phạm!</string>
    <string name="over_time_error">Đã học %s. Phiên học vị phạm quy định không học quá 4 giờ liên tiếp!</string>
    <string name="over_time_24h_warning">Đã học %s. Cảnh báo chạy quá 10 giờ trong 24 giờ sẽ vi phạm!</string>
    <string name="over_time_24h_error">Đã học %s. Phiên học vị phạm quy định không chạy quá 10 giờ trong 24 giờ!</string>
    <string name="teacher_over_time_24h_warning">Giảng viên chuẩn bị quá 10 tiếng trong ngày</string>
    <string name="teacher_over_time_24h_error">Giảng viên quá 10 tiếng trong 1 ngày</string>
    <string name="night_time_over_warning">Đã học %1$s giờ đêm. Chuẩn bị quá giờ đêm cho phép (%2$s)!</string>
    <string name="night_time_over_error">Đã học %1$s giờ đêm, vượt mức cho phép %2$s!</string>
    <string name="auto_time_over_warning">Đã học %1$s xe số tự động. Chuẩn bị quá giờ cho phép (%2$s)!</string>
    <string name="auto_time_over_error">Đã học %1$s xe số tự động, vượt mức cho phép %2$s!</string>
    <string name="connect_server_error">Kết nối máy chủ bị gián đoạn! Kiểm tra lại kết nối internet trên thiết bị.</string>
    <string name="connect_server_success">Kết nối lại máy chủ thành công.</string>
    <string name="finish_session_success">Phiên học đã kết thúc, vui lòng kiểm tra đối soát phiên. Xin cảm ơn!</string>
    <string name="no_wearing_mask">Vui lòng không đeo khẩu trang trong quá trình học</string>
    <string name="start_session_success">Bắt đầu phiên học lái xe. Giảng viên %s, biển số xe %s. Học viên %s, hạng %s.Vui lòng không đeo khẩu trang trong quá trình học. Đã học %s trong 1 ngày</string>
    <string name="continue_session_success">Tiếp tục phiên học lái xe. Giảng viên %s, biển số xe %s. Học viên %s, hạng %s</string>
    <string name="common_error_message">Lỗi xử lý!!\n\nXin hãy thử lại</string>
    <string name="warning_verify_fail_counter">Đang nhận diện khuôn mặt học viên</string>
    <string name="face_verify_success">Nhận diện thành công</string>
    <string name="verify_fail_message">Xác thực thất bại! Nếu kết thúc phiên &lt; 75% phiên học sẽ không hợp lệ</string>
    <string name="verify_fail_voice">Xác thực thất bại! Nếu kết thúc phiên nhỏ hơn 75% phiên học sẽ không hợp lệ</string>
    <string name="create_face_group_error">Lỗi tạo facegroup!\nHãy thử khởi động lại ứng dụng.</string>
    <string name="get_url_upload_image_error">Lỗi lấy đường dẫn lưu ảnh!\nHãy thử lại.</string>
    <string name="certification_verify_timeout_message">Quá thời gian.!\n Vui lòng kích hoạt lại </string>
    <string name="add_new_student_recognition_label">THÊM NHẬN DIỆN\nHỌC VIÊN</string>
    <string name="add_new_teacher_recognition_label">THÊM NHẬN DIỆN\nGIÁO VIÊN</string>
    <string name="loading_user_assigned_in_device">Đồng bộ dữ liệu nhận dạng…</string>
    <string name="confirm_user_info_message">Xác nhận chính xác thông tin trước khi mở phiên học!. Kiểm tra ảnh đăng nhập rõ mặt học viên trước khi mở phiên</string>
    <string name="confirm_logout_info_message">Kiểm tra ảnh đăng nhập, đăng xuất rõ mặt học viên trước khi kết thúc phiên</string>
    <string name="detect_student_fail">Nhận dạng học viên thất bại</string>
    <string name="version_locked_message">Phiên bản HC DAT hiện tại của bạn đã cũ, vui lòng cập nhật lên phiên bản mới nhất</string>
    <string name="not_authority_message">KHÔNG CÓ QUYỀN, VUI LÒNG LIÊN HỆ VỚI TRUNG TÂM!</string>
    <string name="velocity_error">Lỗi vận tốc. Vui lòng kiểm tra lại thiết bị</string>
    <string name="gps_error">Lỗi định vị GPS, vui lòng kiểm tra lại thiết bị</string>
    <string name="distance_not_change">Quãng đường đã không thay đổi trong 3 phút, vui lòng kiểm tra lại internet và trạng thái GPS</string>
    <string name="transmitting_data_to_server">Đang truyền dữ liệu về máy chủ HC. Vui lòng đợi truyền dữ liệu hoàn thành</string>
    <string name="upload_gps_error">Đẩy dữ liệu GPS thất bại, vui lòng kiểm tra lại internet, liên hệ quản trị viên</string>
    <string name="only_use_4g_message"> Vui lòng dùng 4G để đảm bảo dữ liệu truyền về máy chủ HC đầy đủ</string>
    <string name="param_session_not_display"> Giá trị lần cuối và tỉ lệ thành công không hiển thị trong hơn 6 phút</string>
    <string name="auto_logout_message"> Hệ thống tự động đăng xuất do chuẩn bị quá thời gian học</string>
    <string name="logout_by_admin_message"> Phiên học được đăng xuất bởi quản trị viên</string>
    <string name="check_missing_data_fail"> Kiểm tra thất bại. Vui lòng thử lại!</string>
    <string name="teacher_login_title">ĐĂNG NHẬP GIẢNG VIÊN</string>
    <string name="student_login_title">ĐĂNG NHẬP HỌC VIÊN</string>
    <string name="login_wrong_type">ĐĂNG NHẬP KHÔNG ĐÚNG</string>
    <string name="login_teacher_type_required">Thông tin đăng nhập của bạn không phải là GIẢNG VIÊN!\n\nHãy kiểm tra lại.</string>
    <string name="login_student_type_required">Thông tin đăng nhập của bạn không phải là HỌC VIÊN!\n\nHãy kiểm tra lại.</string>
    <string name="student_empty_course">Học viên chưa được thêm vào bất kỳ khóa học nào!\n\nHãy báo trung tâm để được xử lý.</string>
    <string name="car_not_in_course">Thiết bị DAT chưa được gán với xe hoặc xe này chưa được thêm vào khóa học!\n\nHãy báo trung tâm để được xử lý.</string>
    <string name="can_not_check_car_in_course_by_internet">Không thể kiểm tra được thiết bị DAT có được gán với xe hoặc xe đã được gán vào khóa học chưa do không có kết nối internet!</string>
    <string name="can_not_continues">KHÔNG THỂ TIẾP TỤC</string>
    <string name="teacher_not_in_any_training_center">Giảng viên chưa được gán vào bất kỳ trung tâm đào tạo nào!\n\nHãy báo trung tâm để được xử lý.</string>
    <string name="student_face_recognition_null">Học viên chưa có ảnh mẫu nhận diện khuôn mặt!\n\nBạn có muốn tạo mẫu nhận diện cho học viên ngay bây giờ?</string>
    <string name="make_student_face_recog_bt">TẠO NHÂN DIỆN</string>
    <string name="reject_make_face_recog_bt">KHÔNG TẠO</string>
    <string name="tls_check_bt">KIỂM TRA</string>
    <string name="teacher_not_have_sample_image">Giảng viên chưa có ảnh nhận dạng hoặc ảnh nhận dạng chưa đạt tiêu chuẩn!\n\nCài đặt nhận dạng ngay bây giờ?</string>
    <string name="teacher_not_found">Không có giảng viên nào có mã học viên hoặc số CCCD như bạn vừa nhập!\n\nHãy kiểm tra lại.</string>
    <string name="login_face_fail">Đăng nhập thất bại!\n\nHãy thử lại.</string>
    <string name="serial_number_info">SN: %s</string>
    <string name="vehicle_plate_info">Biển số: %s</string>
    <string name="confirm_delete_date">Trước khi xóa dữ liệu trên thiết bị, hãy đảm bảo tất cả dữ liệu của các phiên học đã được truyền lên máy chủ CSDT và máy chủ Cục Đường Bộ thành công!\n\nBạn có chắc chắn muốn xóa dữ liệu?</string>
    <string name="serial_value">Seri: %s</string>
    <string name="course_value">Khóa học: %s</string>
    <string name="level_value">Hạng: %s</string>
    <string name="vehicle_value">Biển số xe: %s</string>
    <string name="counter_time_value">%s GIỜ</string>
    <string name="login_rfid">Sử dụng thẻ</string>
    <string name="guide">Hướng dẫn sử dụng</string>
    <string name="login_face">Nhận diện khuôn mặt</string>
    <string name="search">Tìm kiếm</string>
    <string name="detect_finger">Detect</string>
    <string name="get_finger_image">get Image</string>
    <string name="ext_feature">Enroll</string>
    <string name="match_feature">Match</string>
    <string name="match_finger">Match</string>
    <string name="device_version">Version</string>
    <string name="serial_number">Device SN</string>
    <string name="down_mb">enroll</string>
    <string name="template_position">Template position:</string>
    <string name="delete_mb">delete</string>
    <string name="clear_mb">clear</string>
    <string name="host">Host computer </string>
    <string name="low">Lower machine , flash templates</string>
    <string name="device_info">Device Info</string>
    <string name="flash_capacity">capacity</string>
</resources>