<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_menu_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B7000000"
        android:gravity="center"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/navigationBt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="45dp"
                    android:src="@drawable/navigation_bt"
                    android:scaleType="fitXY"
                    app:tint="@color/orange" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textColor="@color/white"
                    android:layout_marginStart="3dp"
                    android:text="MENU"
                    android:textSize="26dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_horizontal"
                android:text="Phiên bản: 3.3.5  " />
        </RelativeLayout>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/teacher_login_title"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="50sp"
            android:textStyle="bold"
            android:gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="400dp"
                    android:layout_height="400dp"
                    android:padding="10dp"
                    android:src="@drawable/icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white_2"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="CHỌN HÌNH THỨC ĐĂNG NHẬP"
                    android:textAlignment="center"
                    android:textColor="@color/orange"
                    android:textSize="50sp"
                    android:textStyle="bold"
                    android:gravity="center_horizontal" />
                <Button
                    android:id="@+id/btLogin_face"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/selector_button_login"
                    android:text="@string/login_face"
                    android:textColor="@color/white"
                    android:textSize="35sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white_2"
                    android:layout_marginTop="20dp"
                    android:text="Hoặc"
                    android:textSize="20sp"
                    android:textStyle="italic" />
                <Button
                    android:id="@+id/btLogin_rfid"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/selector_button_login"
                    android:text="@string/login_rfid"
                    android:textColor="@color/white"
                    android:textSize="35sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btGuide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/selector_button_login"
                    android:text="@string/guide"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/tvSerialNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_alignParentStart="true"
                android:text="Serial number: -/-"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvVehiclePlate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="Biển số xe: -/-"
                android:textColor="@color/white"
                android:textSize="35sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
